# edugain-qual-improv

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AI_IMPLEMENTATION_PROMPT.md  CHANGELOG.md  CLAUDE.md  COVERAGE_ANALYSIS.md  Dockerfile  FEATURE_SIRTFI_COVERAGE.md  FUTURE_ENHANCEMENTS.md  Makefile  QUICKSTART.md  README.md  REPOSITORY_REVIEW.md  TODO.md  WEB_DASHBOARD_MVP.md  analyze.py  docker-compose.yml  privacy_security_analysis.py  production.md  pyproject.toml  requirements-runtime.txt  requirements-web.txt  requirements.txt  seccon_nosirtfi.py  streamlit_app.py  test_privacy_security_analysis.py  test_seccon_nosirtfi.py
.claude/: AGENTS_GUIDE.md  settings.local.json
.claude/agents/: gdpr-i18n-checker.md  implementer.md  researcher.md
.claude/commands/: code-gen.md  code-review.md  coordinator.md  debugger.md  doc-gen.md  integration-test-writer.md  researcher.md  review-all.md  test-writer.md
.claude/hooks/: session-start.sh  user-prompt-submit.sh
.claude/plugins/edugain-agents/.claude-plugin/: plugin.json
.claude/plugins/edugain-agents/agents/: documenter.md  reviewer.md  tester.md
.claude/plugins/edugain-agents/commands/: code-gen.md  code-review.md  coordinator.md  debugger.md  doc-gen.md  integration-test-writer.md  researcher.md  test-writer.md
.claude/skills/coordinator/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docker/: entrypoint.sh
docs/: AI_READY_PROMPT.md  CLAUDE.md  FUTURE_ENHANCEMENTS.md  README.md  ROADMAP.md  WEB_INTERFACE_MVP.md  content-quality-analysis.md  idp-privacy-tracking.md  index.md  migration-guide-v3.md  webapp-options.md
docs/ai-prompts/: 01-json-output-format.md  02-exit-codes-quality-thresholds.md  03-actionable-insights-report.md  04-historical-snapshot-storage.md  05-dry-run-mode-validation.md  06-idp-privacy-statement-tracking.md  07-security-contact-quality-validation.md  08-privacy-url-content-quality.md  09-duplicate-entity-detection.md  10-progress-indicators.md  11-placeholder-url-detection.md  12-time-series-trend-analysis.md  13-federation-benchmarking.md  14-metadata-completeness-scoring.md  15-additional-entity-category-tracking.md  16-automated-alerting-system.md  17-enhanced-pdf-reports-executive-summary.md  18-differential-comparison-baseline-mode.md  19-entity-freshness-activity-tracking.md  20-multilingual-support-quality.md  21-certificate-encryption-quality.md  22-public-quality-dashboard.md  README.md
scripts/: check_idp_privacy.py  clean-artifacts.sh  clean-env.sh  dev-env.sh  docker-cli.sh  local-ci.sh
scripts/app/: edugain-analyze.sh  edugain-broken-privacy.sh  edugain-seccon.sh  edugain-sirtfi.sh
scripts/dev/: dev-env.sh  lint.sh  local-ci.sh
scripts/maintenance/: clean-artifacts.sh
scripts/web/: dev.sh
src/edugain_analysis/: __init__.py  __main__.py
src/edugain_analysis/cli/: __init__.py  broken_privacy.py  download_prompt.py  download_review.py  main.py  pdf.py  seccon.py  sirtfi.py  utils.py
src/edugain_analysis/config/: __init__.py  settings.py
src/edugain_analysis/core/: __init__.py  analysis.py  content_analysis.py  entities.py  metadata.py  security.py  validation.py
src/edugain_analysis/formatters/: __init__.py  base.py  pdf.py
src/edugain_analysis/web/: README.md  __init__.py  app.py  import_data.py  models.py
src/edugain_analysis/web/static/css/: custom.css
src/edugain_analysis/web/templates/: base.html  config.html  dashboard.html  empty.html  entity_detail.html  federation_detail.html  federations.html  history.html  validation.html
src/edugain_analysis/web/templates/partials/: entity_changes.html  entity_table.html  federation_comparison_chart.html  federation_table.html  search_results.html  stats_cards.html  trend_chart.html
src/edugain_analysis_web/: app.py  import_data.py  models.py
src/edugain_analysis_web/static/css/: custom.css
src/edugain_analysis_web/templates/: base.html  config.html  dashboard.html  empty.html  federations.html  validation.html
src/edugain_analysis_web/templates/partials/: entity_table.html  stats_cards.html
tests/: conftest.py  test_privacy_security_analysis.py  test_seccon_nosirtfi.py
tests/integration/: __init__.py
tests/unit/: test_basic_imports.py  test_cli_broken_privacy.py  test_cli_main.py  test_cli_seccon.py  test_cli_sirtfi.py  test_core_analysis.py  test_core_content_analysis.py  test_core_entities.py  test_core_metadata.py  test_core_security.py  test_core_validation.py  test_formatters.py  test_main_module.py  test_package_basic.py  test_web_app.py  test_web_import_data.py  test_web_models.py
